[package]
name = "core"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
bincode = "0.9"
byteorder = "1.0"
futures = "0.1"
polygon-math = { git = "https://github.com/randomPoison/polygon", features = ["serde-impls"] }
rand = "0.3"
ring = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-io = "0.1"
