[package]
name = "core"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
amethyst = "0.8"
cgmath = { version = "0.16", features = ["mint", "serde"] }
crossbeam-channel = "0.1.3"
futures = "0.1"
log = "0.4"
rand = "0.3"
serde = { version = "1.0", features = ["derive"] }
sumi = { path = "../sumi" }
tokio-core = "0.1.17"
