[package]
name = "server"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
bytes = "0.4"
core = { path = "../core" }
futures = "0.1"
futures-cpupool = "0.1"
polygon-math = { git = "https://github.com/randomPoison/polygon", features = ["serde-impls"] }
serde_json = "1.0"
tokio-io = "0.1"
tokio-core = "0.1"
