[package]
name = "server"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
core = { path = "../core" }
futures = "0.1"
futures-cpupool = "0.1"
log = "0.4"
log4rs = { version = "0.8", features = ["toml_format"] }
rand = "0.4.1"
sumi = { path = "../sumi" }
tokio-core = "0.1"
