[package]
name = "sumi"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
bincode = "0.9"
byteorder = "1.0"
crc = "1.5"
failure = "0.1"
futures = "0.1"
rand = "0.3"
ring = "0.12"
serde = "1.0"
serde_derive = "1.0"
state_machine_future = "0.1"
subslice_index = "0.5"
tokio-core = "0.1.11"
tokio-io = "0.1"
