[package]
name = "workers"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.10.0"
core = { path = "../core" }
crossbeam-channel = "0.1.3"
futures = "0.1.25"
futures-cpupool = "0.1"
log = "0.4"
log4rs = { version = "0.8", features = ["toml_format"] }
rand = "0.4.1"
tokio-core = "0.1.17"
spatialos-sdk = "0.0.0"
structopt = "0.2.14"
ctrlc = "3.1.1"
tap = "0.3.1"
