[package]
name = "server"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[dependencies]
amethyst = "0.10.0"
core = { path = "../core" }
crossbeam-channel = "0.1.3"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.4"
log4rs = { version = "0.8", features = ["toml_format"] }
rand = "0.4.1"
sumi = { path = "../sumi" }
tokio-core = "0.1.17"
