[package]
name = "server"
version = "0.1.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.10.0"
core = { path = "../../core" }
crossbeam-channel = "0.1.3"
futures = "0.1.25"
futures-cpupool = "0.1"
log = "0.4"
log4rs = { version = "0.8", features = ["toml_format"] }
rand = "0.4.1"
sumi = { path = "../../sumi" }
tokio-core = "0.1.17"
spatialos-sdk = { git = "https://github.com/jamiebrynes7/spatialos-sdk-rs", rev = "5890ab1" }
structopt = "0.2.14"
ctrlc = "3.1.1"
